<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/preto"
    android:orientation="vertical"
    tools:context=".Activities.FilmeActivity">

    <include layout="@layout/tool_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#222222">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgPoster"
                android:layout_width="180dp"
                android:layout_height="266dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/poster"
                android:src="@drawable/img" />

            <TextView
                android:id="@+id/txtMovieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/titulo_filme"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnAddRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:background="#f35100"
                android:onClick="adicionarOuRetirar"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/botao_adiciona_remove"
                android:textColor="#000000" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
