<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:gravity="fill_horizontal">

        <ImageView
            android:layout_width="82dp"
            android:layout_height="125dp"
            android:id="@+id/imgPoster"
            android:src="@drawable/img"
            android:contentDescription="@string/poster"
            android:layout_gravity="left" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left">

                <TextView
                    android:id="@+id/txtTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/movie_title"
                    android:textStyle="bold"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="0dp"
                    android:paddingRight="0dp"
                    android:layout_gravity="top">
                </TextView>

                <TextView
                    android:id="@+id/txtAno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/ano"
                    android:textStyle="bold|italic"
                    android:paddingLeft="8dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="0dp"
                    android:layout_gravity="top">
                </TextView>

            </LinearLayout>
    </LinearLayout>
</LinearLayout>